Fixed bugs and used LinkedLists