@@ -22,23 +22,20 @@ class Calculator {
         if (expr.length() == 0) {
             return NaN;
         } else {
-            List<String> tokens = tokenize(expr);
-            List<String> postfix = infix2Postfix(tokens);
+            LinkedList<String> tokens = tokenize(expr);
+            LinkedList<String> postfix = infix2Postfix(tokens);
             return evalPostfix(postfix);
         }
     }
-    // Check for negativ integer
+    // Check for negative integer
     private boolean isNegative(String prev,  String current) {
-        if(current.equals("-") && (prev.equals("") || OPERATORS.contains(prev) || prev.equals("("))){
-            return true;
-        }
-        return false;
+        return current.equals("-") && (prev.equals("") || OPERATORS.contains(prev) || prev.equals("("));
     }
 
     // ------  Evaluate RPN expression -------------------
 
-    double evalPostfix(List<String> postfix) {
-        List<String> stack = new ArrayList<>();
+    double evalPostfix(LinkedList<String> postfix) {
+        LinkedList<String> stack = new LinkedList<>();
         for (String ele : postfix) {
             if (OPERATORS.contains(ele)) {
                 double d1;
@@ -75,14 +72,15 @@ class Calculator {
             case "^":
                 return pow(d2, d1);
         }
+
         throw new RuntimeException(OP_NOT_FOUND);
     }
 
     // ------- Infix 2 Postfix ------------------------
 
-    List<String> infix2Postfix(List<String> list) {
-        List<String> result = new ArrayList<>();
-        List<String> stack = new ArrayList<>();
+    LinkedList<String> infix2Postfix(LinkedList<String> list) {
+        LinkedList<String> result = new LinkedList<>();
+        LinkedList<String> stack = new LinkedList<>();
         int index = 0;
         boolean skipNext = false;
 
@@ -114,20 +112,22 @@ class Calculator {
             }
 
             else if (OPERATORS.contains(ele)) {
-                boolean satisfied = Boolean.FALSE;
-                if (stack.size() > 0 && OPERATORS.contains(stack.get(stack.size() - 1))) {
+                boolean satisfied = false;
+                if (stack.size() > 0 && OPERATORS.contains(stack.getLast())) {
                     while (!satisfied && stack.size() > 0) {
-                        if (getPrecedence(stack.get(stack.size() - 1)) == getPrecedence(ele) || getPrecedence(stack.get(stack.size() - 1)) > getPrecedence(ele)) {
-                            if (getAssociativity(ele) == Assoc.RIGHT && getPrecedence(stack.get(stack.size() - 1)) == getPrecedence(ele)) {
+                        if (stack.getLast().equals("(")) {
+                            stack.add(ele);
+                            satisfied = true;
+                        } else if (getPrecedence(stack.getLast()) == getPrecedence(ele) || getPrecedence(stack.getLast()) > getPrecedence(ele)) {
+                            if (getAssociativity(ele) == Assoc.RIGHT && getPrecedence(stack.getLast()) == getPrecedence(ele)) {
                                 stack.add(ele);
-                                satisfied = Boolean.TRUE;
+                                satisfied = false;
                             } else {
-                                result.add(stack.get(stack.size() - 1));
-                                stack.remove(stack.size() - 1);
+                                result.add(stack.removeLast());
                             }
                         } else {
                             stack.add(ele);
-                            satisfied = Boolean.TRUE;
+                            satisfied = true;
                         }
                     }
                     if (stack.size() <= 0) {
@@ -148,11 +148,10 @@ class Calculator {
         }
 
         for (int i = 0; i < stack.size(); ) {
-            if (!stack.get(stack.size() - 1).equals("(")) {
-                result.add(stack.get(stack.size() - 1));
-                stack.remove(stack.size() - 1);
+            if (!stack.getLast().equals("(")) {
+                result.add(stack.removeLast());
             } else {
-                stack.remove(stack.size() - 1);
+                stack.removeLast();
             }
         }
 
@@ -189,10 +188,10 @@ class Calculator {
 
     // ---------- Tokenize -----------------------
 
-    List<String> tokenize(String expr) {
-        List<String> list = Arrays.asList(expr.split(""));
-        List<String> retlist = new ArrayList<>();
-        String element = "";
+    LinkedList<String> tokenize(String expr) {
+        LinkedList<String> list = new LinkedList<>(Arrays.asList(expr.split("")));
+        LinkedList<String> retlist = new LinkedList<>();
+        StringBuilder element = new StringBuilder();
         String parentheses = "()";
         int operators = 0;
         int operands = 0;
@@ -200,9 +199,9 @@ class Calculator {
         int index = 0;
         for (String ele : list) {
             if (!isNegative((index==0) ? "" : list.get(index-1),ele) && (OPERATORS.contains(ele) || parentheses.contains(ele) || ele.equals(" "))) {
-                if (!element.equals("")) {
-                    retlist.add(element);
-                    element = "";
+                if (!element.toString().equals("")) {
+                    retlist.add(element.toString());
+                    element = new StringBuilder();
                     operands++;
                 }
                 if (OPERATORS.contains(ele)) {
@@ -213,12 +212,12 @@ class Calculator {
                     par++;
                 }
             } else {
-                element += ele;
+                element.append(ele);
             }
             index++;
         }
-        if (!element.equals("")) {
-            retlist.add(element);
+        if (!element.toString().equals("")) {
+            retlist.add(element.toString());
             operands++;
         }
         if (operators < operands - 1 || par % 2 != 0) {
